InsuranceOrg/force-app/main/default/objects/Activity/fields/vlocity_ins__DueInDays__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DueInDays__c</fullName>
    <inlineHelpText>This field is used by Activity Templates to set the Due Date for an Activity. It should be blank for all manually-created Activities.</inlineHelpText>
    <label>Due in (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>