InsuranceOrg/force-app/main/default/objects/Activity/fields/vlocity_ins__EventStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EventStatus__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>