InsuranceOrg/force-app/main/default/objects/Activity/fields/vlocity_ins__VerifiedAgentName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__VerifiedAgentName__c</fullName>
    <label>Verified Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>